--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
 
 
 header {
@@ -12,7 +16,7 @@ header {
     justify-content: space-evenly;
     align-items: center;
     background-color: rgb(248, 244, 236);
-
+    height: 24vh;
 }
 
 
@@ -22,31 +26,32 @@ div {
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
     height: 100vh;
-    margin-top: 100px;
-    margin-bottom: 10px;
+    margin-top: 18vh;
+    margin-bottom: 0.5vh;
+    justify-items: center;
 }
 
 
 
 .quadrado {
     display: grid;
-    justify-items: start;
     grid-column: 2/5;
-    grid-row: 1/3;
+    grid-row: 1/4;
 }
+
 
 #imgprincipal {
     opacity: 0.9;
     display: grid;
     grid-column: 3/5;
-    grid-row: 1/4;
+    grid-row: 1/5;
 }
 
 
 section {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
-    padding: 20px;
+    padding: 2vh;
 }
 
 
@@ -95,7 +100,6 @@ header button {
     background-color: rgb(235, 183, 87);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(80, 70, 58);
-
 }
 
 header button:hover {
@@ -103,8 +107,8 @@ header button:hover {
 }
 
 section.quadrado {
-    height: 400px;
-    width: 600px;
+    height: 40vh;
+    width: 50vw;
 }
 
 
@@ -112,11 +116,11 @@ section.quadrado {
 article.quadradinhos {
     align-items: center;
     text-align: center;
-    border: 1px solid black;
-    height: 300px;
-    width: 300px;
+    border: 1vh solid black;
+    height: 30vh;
+    width: 30vw;
     display: inline-block;
-    border-radius: 10px;
+    border-radius: 0.1vh;
 }
 
 article button {
@@ -126,13 +130,13 @@ article button {
 }
 
 article button:hover {
-    background-color: rgb(232, 149, 5);
+    background-color: rgb(231, 129, 20);
 }
 
 article {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 0.2vh;
     font-size: large;
 }
 
@@ -141,64 +145,105 @@ article {
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: 1fr;
     height: 50vh;
-    gap: 10px;
-    margin: 10px;
+    gap: 0.1vh;
+    margin: 0.1vh;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
 }
 
-#caixa1:hover {
-    background-color: rgb(220, 193, 139);
-}
-
-#caixa2:hover {
-    background-color: rgb(220, 193, 139);
-}
-
-#caixa3:hover {
-    background-color: rgb(220, 193, 139);
-}
-
-
 #caixa1 {
     background-color: rgb(246, 234, 209);
     grid-column: 2/4;
-    border-radius: 10px;
-    border: 3px solid rgb(174, 132, 36);
+    border-radius: 6vh;
+    border: 0.5vh solid rgb(208, 160, 47);
     justify-content: center;
-    width: 220px;
+    width: 18vw;
 }
 
 #caixa2 {
     background-color: rgb(246, 234, 209);
     grid-column: 5/7;
-    border-radius: 10px;
-    border: 3px solid rgb(174, 132, 36);
+    border-radius: 6vh;
+    border: 0.5vh solid rgb(208, 160, 47);
     justify-content: center;
-    width: 220px;
+    width: 18vw;
 }
 
 #caixa3 {
     background-color: rgb(246, 234, 209);
     grid-column: 8/10;
-    border-radius: 10px;
-    border: 3px solid rgb(174, 132, 36);
+    border-radius: 6vh;
+    border: 0.5vh solid rgb(208, 160, 47);
     justify-content: center;
-    width: 220px;
+    width: 18vw;
 }
 
-.tres {
+.frasepr {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 50vh;
-    margin-top: 200px;
+    margin-top: 40vh;
     justify-content: space-around;
+    font-size: x-large;
+
 }
 
-.tres p {
+.frasepr p {
     font-size: larger;
     color: rgb(227, 182, 124);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: 0.1em 0.1em 0.05em #545252;
+}
+
+
+
+
+
+@media screen and (min-device-width: 320px) and (max-device-width:1200px) {
+    
+    header{
+        display: flex;
+        flex-direction: column;
+        height: 33vh;
+    }
+    
+    .quadrado{
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        width: 50vw;
+        justify-content: center;
+       align-items: center;
+    }
+    .quadrado p{
+        display: flex;
+        flex-direction: column;
+        width: 60vw;
+    }
+
+    .quadradinhos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap:1vh
+    }
+    #caixa1{
+        width: 60vw;
+        }
+    #caixa2{
+        width: 60vw;
+    }
+    #caixa3{
+        width: 60vw;
+    }
+
+    .frasepr{
+        font-size: 1em;
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
+    }
 }
