--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ article {
     header{
         display: flex;
         flex-direction: column;
-        height: 33vh;
+        height: 44vh;
     }
     
     .quadrado{
@@ -220,22 +220,24 @@ article {
         display: flex;
         flex-direction: column;
         width: 60vw;
+        margin-top: 30vh;
     }
 
     .quadradinhos{
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap:1vh
+        gap:1vh;
+    
     }
     #caixa1{
-        width: 60vw;
+        width: 90vw;
         }
     #caixa2{
-        width: 60vw;
+        width: 90vw;
     }
     #caixa3{
-        width: 60vw;
+        width: 90vw;
     }
 
     .frasepr{
